Got Study page finished and fixed some layout issues

--- a/snap.css
+++ b/snap.css
@@ -7,3 +7,23 @@ box-shadow: 1px 1px 10px orange;
 .title {
     cursor: pointer;
 }
+
+.answer {
+    font-style: italic;
+}
+
+.md-green {
+    background-color: #4CAF50 !important;
+}
+
+.md-green md-icon {
+    color: #FFF !important;
+}
+
+.md-green:focs {
+    background-color: #43A047;
+}
+
+.md-green:active {
+    background-color: #66BB6A;
+}
